--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<header>
 			<nav class="container">
 				<a href="index.html">Sleep Time</a>
-				<a href="index2.html">Unsusal Animals</a>
+				<a href="index2.html">Unusual Animals</a>
 				<a href="index3.html">ETC</a>
 			</nav>
 		</header>
@@ -368,4 +368,5 @@
 		</footer>
 
 	</div> </body>
+
 </html>
