--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					<div class="ant-text">
 						<h3>개미</h3>
 						<p1>4-5H</p1><br>
-						<p2>여왕개미는 하루 9시간을 자지만,<br>일개미는 1분에 1-2분씩 하루 수백 번의 쪽잠을 잡니다.</p2>
+						<p2>여왕개미는 하루 9시간을 자지만,<br>일개미는 1-2분씩 하루 수백 번의 쪽잠을 잡니다.</p2>
 					</div>
 					<div class="ant-image-area">
 						<div class="ant-sleep-image-wrapper">
@@ -370,3 +370,4 @@
 	</div> </body>
 
 </html>
+
